rewrite ui to GWT